# experimentation

./: .gitignore  CLAUDE.md
backend/: Cargo.toml  RULES.md
backend/cache-service/: Cargo.toml  build.rs
backend/cache-service/src/: main.rs
backend/db-service/: Cargo.toml  build.rs
backend/db-service/src/: main.rs
backend/docker/: cache-service.Dockerfile  db-service.Dockerfile  nginx.conf  product-backend.Dockerfile  product-frontend.Dockerfile
backend/docs/: README.md  architecture.md  deployment.md  development.md  kubernetes.md  services.md
backend/k8s/experiproduct/: deployment.yaml  secret.yaml  service.yaml
backend/k8s/grafana/: configmap.yaml  dashboard.yaml  deployment.yaml  service.yaml
backend/k8s/loki/: configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
backend/k8s/postgresql/: deployment.yaml  pvc.yaml  secret.yaml  service.yaml
backend/k8s/redis/: deployment.yaml  service.yaml
backend/k8s/registry/: registry.yaml
backend/product-backend/: Cargo.toml  build.rs
backend/product-backend/src/: main.rs
backend/product-frontend/: index.html  package-lock.json  package.json
backend/product-frontend/src/: App.tsx  main.tsx
backend/product-frontend/src/components/: NavBar.tsx
backend/product-frontend/src/pages/: ArchitecturePage.tsx  ItemsPage.tsx  RedisPage.tsx  TelemetryPage.tsx  WelcomePage.tsx
backend/proto/: cache.proto  items.proto
backend/scripts/: build-deploy.sh  install-build-deps.sh  setup-k8s.sh  uninstall.sh
prompts/: createk8sservices.md
scripts/: ubuntu_setup.sh
