[workspace]
members = [
    "db-service",
    "cache-service",
    "product-backend",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-loki = "0.2"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
