[package]
name = "cache-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-loki = { workspace = true }
url = { workspace = true }
redis = { version = "0.27", features = ["tokio-comp"] }

[build-dependencies]
tonic-build = "0.12"
